# Wavelink-Discord-Bot

./: .gitignore  README.md  pyproject.toml
lavalink/: application.yml  start.bat
wavelink discord bot/: bot.py  main.py  menu.py  music_service.py
wavelink discord bot/cogs/: music.py
wavelink_discord_bot/: bot.py  main.py  music_service.py
wavelink_discord_bot/cogs/: music.py  tools.py
wavelink_discord_bot/custom_inputs/: __init__.py  emoji_menu.py  emoji_numeric_menu.py  numeric_menu.py
